@@ -42,6 +42,7 @@ struct env_d {
 struct env_link {
   unsigned long magic;
   void* apex_start;
+  void* apex_end;
   void* env_start;
   void* env_end;
   unsigned long env_d_size;
@@ -52,7 +53,7 @@ struct env_link {
 
 #define ENV_CB_MAX	(512)
 
-#define ENV_LINK_MAGIC	('A'<<0)|('E'<<8)|('L'<<16)|('0'<<24)
+#define ENV_LINK_MAGIC	(unsigned long)(('A'<<0)|('E'<<8)|('L'<<16)|('0'<<24))
 
 /* ----- Prototypes */
 
